--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -29,6 +29,8 @@ coroutines = "1.10.1"
 accompanist-permissions = "0.32.0"
 exifinterface = "1.3.6"
 java-jwt = "4.4.0"
+datastore = "1.1.4"
+kmm-settings = "1.3.0"
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
@@ -53,6 +55,11 @@ ktor-client-content-negotiation = { module = "io.ktor:ktor-client-content-negoti
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
 kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "coroutines" }
 accompanist-permissions = { module = "com.google.accompanist:accompanist-permissions", version.ref = "accompanist-permissions" }
+datastore-preference = { module = "androidx.datastore:datastore-preferences", version.ref = "datastore" }
+datastore-preference-core = { module = "androidx.datastore:datastore-preferences-core", version.ref = "datastore" }
+datastore = { module = "androidx.datastore:datastore", version.ref = "datastore" }
+kmm-settings = { module = "com.russhwolf:multiplatform-settings", version.ref = "kmm-settings" }
+kmm-settings-noarg = { module = "com.russhwolf:multiplatform-settings-no-arg", version.ref = "kmm-settings" }
 
 ktor-server-call-logging = { module = "io.ktor:ktor-server-call-logging", version.ref = "ktor" }
 ktor-server-core = { module = "io.ktor:ktor-server-core", version.ref = "ktor" }
