config create full jar

--- a/server/src/main/resources/application.conf
+++ b/server/src/main/resources/application.conf
@@ -1,13 +1,14 @@
 ktor {
     deployment {
-            port = 8080
+            port = 8090
     }
     application {
         modules = [ com.sesi.quizly.MainAppKt.module ]
     }
     database {
         driverClassName = "com.mysql.cj.jdbc.Driver"
-        jdbcURL = "jdbc:mysql://192.168.50.73:3306/QUIZLY"
+        #jdbcURL = "jdbc:mysql://192.168.50.73:3306/QUIZLY"
+        jdbcURL = "jdbc:mysql://localhost:3306/QUIZLY"
         user = "chris"
         password = "AbrilMexico-1531"
     }
