--- a/server/src/main/resources/application.conf
+++ b/server/src/main/resources/application.conf
@@ -7,8 +7,9 @@ ktor {
     }
     database {
         driverClassName = "com.mysql.cj.jdbc.Driver"
-        #jdbcURL = "jdbc:mysql://192.168.50.73:3306/QUIZLY"
-        jdbcURL = "jdbc:mysql://localhost:3306/QUIZLY"
+        jdbcURL = "jdbc:mysql://192.168.50.73:3306/QUIZLY"
+        #jdbcURL = "jdbc:mysql://localhost:3306/QUIZLY"
+
         user = "chris"
         password = "AbrilMexico-1531"
     }
