--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -35,8 +35,10 @@ kmm-settings = "1.3.0"
 coil = "3.2.0"
 coil-network = "3.2.0"
 shadow = "8.3.6"
+kermit = "2.0.8"
 
 [libraries]
+kermit = { module = "co.touchlab:kermit", version.ref = "kermit"}
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
 kotlin-test-junit = { module = "org.jetbrains.kotlin:kotlin-test-junit", version.ref = "kotlin" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
