--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,27 +1,27 @@
 [versions]
-agp = "8.9.1"
-android-compileSdk = "35"
+agp = "8.13.0"
+android-compileSdk = "36"
 android-minSdk = "24"
-android-targetSdk = "35"
-androidx-activityCompose = "1.10.1"
-androidx-appcompat = "1.7.0"
+android-targetSdk = "36"
+androidx-activityCompose = "1.11.0"
+androidx-appcompat = "1.7.1"
 androidx-constraintlayout = "2.2.1"
-androidx-core-ktx = "1.16.0"
-androidx-espresso-core = "3.6.1"
-androidx-lifecycle = "2.8.4"
-androidx-material = "1.12.0"
-androidx-test-junit = "1.2.1"
+androidx-core-ktx = "1.17.0"
+androidx-espresso-core = "3.7.0"
+androidx-lifecycle = "2.9.5"
+androidx-material = "1.13.0"
+androidx-test-junit = "1.3.0"
 androidx-material3 = "1.4.0"
-compose-multiplatform = "1.7.3"
+compose-multiplatform = "1.9.1"
 junit = "4.13.2"
-kotlin = "2.1.10"
-ktor = "3.1.2"
+kotlin = "2.2.21"
+ktor = "3.3.1"
 ktor-test = "2.3.13"
-logback = "1.5.17"
+logback = "1.5.20"
 precompose = "1.6.2"
 landscapist-coil3 = "2.4.7"
-navigation-compose = "2.8.0-alpha10"
-koin = "4.0.3"
+navigation-compose = "2.9.1"
+koin = "4.1.1"
 ktor-koin = "4.0.4"
 exposed-version = "0.60.0"
 mysql = "8.0.33"
@@ -30,12 +30,14 @@ coroutines = "1.10.1"
 accompanist-permissions = "0.32.0"
 exifinterface = "1.3.6"
 java-jwt = "4.4.0"
-datastore = "1.1.4"
+datastore = "1.1.7"
 kmm-settings = "1.3.0"
-coil = "3.2.0"
-coil-network = "3.2.0"
+coil = "3.3.0"
+coil-network = "3.3.0"
 shadow = "8.3.6"
 kermit = "2.0.8"
+sonarqube = "7.0.1.6134"
+kover = "0.9.3"
 
 [libraries]
 kermit = { module = "co.touchlab:kermit", version.ref = "kermit"}
@@ -109,3 +111,5 @@ ktor = { id = "io.ktor.plugin", version.ref = "ktor" }
 kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 kotlin-plugin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 shadow = { id = "com.gradleup.shadow", version.ref = "shadow"}
+sonarqube = { id = "org.sonarqube", version.ref = "sonarqube"}
+ktor-kover = { id = "org.jetbrains.kotlinx.kover", version.ref = "kover"}
