--- a/sonarcloud.properties
+++ b/sonarcloud.properties
@@ -2,3 +2,5 @@ sonar.projectKey=christianGlez100_Quizly
 sonar.projectName=Quizly
 sonar.sources=src/androidMain/kotlin,src/commonMain/kotlin,src/iosMain/kotlin,src/main/kotlin
 sonar.tests=src/commonTest/kotlin,src/test/kotlin
+sonar.kotlin.coveragePlugin=kover
+sonar.coverageReportPaths=/reports/kover/report.xml
